--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
                 <li><a href="index.html"><img src="bunny_symbol-tngd46.png" alt="Skulptören logotyp"></li>
             </div>
             <ul class="links">
-
+                <li><a href="index.html">HEM</a></li>
+                <li><a href="story.html">STORY</a></li>
+                <li><a href="biljetter.html">BILJETTER</a></li>
+                <li><a href="kontakt.html">KONTAKT</a></li>
             </ul>
             <!--Hamburgare-->
             <div class="toggle_btn">
