--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/x-icon" href="bunny_symbol-tngd46.png">
         <link rel="stylesheet" href="https://use.typekit.net/ytz6faf.css">
+        <link rel="stylesheet" href="https://use.typekit.net/zkb2nqe.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
 <body>
     <header>
@@ -38,8 +40,9 @@
     </header>
     
     <div class="background">
+        <div class="gradientindex">
         <div class="rubrikindex">
-            <p>Skulptören</p>
+            <p>SKULPTÖREN</p>
         </div> 
         <div class="countdown"> 
             <span id="nedraknare"></span>
@@ -47,8 +50,11 @@
         <div class="dtms">
             <p>Dagar Timmar Minuter Sekunder</p>
         </div>
+        <div class="buttonindex">
+            <button class="button1"><a href="biljetter.html">Till biljetter</a></button>
+        </div>
     </div>
-
+    </div>
     <footer>
         <p>Gnema</p>
         <div class="socials">
