--- a/story.html
+++ b/story.html
@@ -48,16 +48,27 @@
                 När kvällens första framträdande ska börja och ridån dras upp fylls salen med öronbedövande skrik.
                 På scenen hänger en livlös kvinna i trådar likt en marionettdocka. Detta är det tredje mordoffret 
                 som hittats vid en kulturell plats Norrköping under hösten 2024. Filmen följer kriminaldetektiv
-                Caroline Hällström och hennes son Walter som tillsammans i en kamp mot klockan försöker fånga
+                Caroline Hällström, hennes kollega Annika och hennes son Walter som tillsammans i en kamp mot klockan försöker fånga
                 seriemördaren innan nästa mord begås.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit nulla vitae ligula
+                rutrum lobortis. Quisque suscipit placerat ultrices. Donec gravida, erat nec lacinia tempor,
+                purus orci sodales felis, at blandit ligula est id velit. Aenean eget dolor eu nulla aliquet placerat.
+                Phasellus sed imperdiet tortor, quis tempor dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit nulla vitae ligula
+                rutrum lobortis. Quisque suscipit placerat ultrices. Donec gravida, erat nec lacinia tempor,
+                purus orci sodales felis, at blandit ligula est id velit. Aenean eget dolor eu nulla aliquet placerat.
+                Phasellus sed imperdiet tortor, quis tempor dolor</p>
+            </div>
+            
+            <div class="line1">
+                <img src="line1.png">
             </div>
 
             <div class="photo2">
-                <img src="love2.jpg" alt="bild på karakär nr ett, lova">
+                <img src="Lovvis3.png" alt="bild på karakär nr ett, lova">
             </div>
 
             <div class="chapter1">
-            <h2>Karaktär 1</h2>
+            <h2>Annika</h2>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit nulla vitae ligula
                 rutrum lobortis. Quisque suscipit placerat ultrices. Donec gravida, erat nec lacinia tempor,
                 purus orci sodales felis, at blandit ligula est id velit. Aenean eget dolor eu nulla aliquet placerat.
@@ -66,11 +77,11 @@
             </div>
 
             <div class="photo3">
-                <img src="preben2.jpg" alt="bild på karaktär nr två, elin">
+                <img src="Ellis3.png" alt="bild på karaktär nr två, elin">
             </div>
 
             <div class="chapter2">
-            <h2>Karaktär 2</h2>
+            <h2>Caroline</h2>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit nulla vitae ligula
                 rutrum lobortis. Quisque suscipit placerat ultrices. Donec gravida, erat nec lacinia tempor,
                 purus orci sodales felis, at blandit ligula est id velit. Aenean eget dolor eu nulla aliquet placerat.
@@ -79,11 +90,11 @@
             </div>
         
             <div class="photo4">
-                <img src="tobbis2.jpg" alt="bild på karaktär nr tre, tobbe">
+                <img src="Tobbis3.png" alt="bild på karaktär nr tre, tobbe">
             </div>
 
             <div class="chapter3">
-            <h2>Karaktär 3</h2>
+            <h2>Walter</h2>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas suscipit nulla vitae ligula
                 rutrum lobortis. Quisque suscipit placerat ultrices. Donec gravida, erat nec lacinia tempor,
                 purus orci sodales felis, at blandit ligula est id velit. Aenean eget dolor eu nulla aliquet placerat.
@@ -91,6 +102,9 @@
                 Etiam ac imperdiet ligula. Aenean efficitur sit amet mauris vitae porttitor.</p>
             </div>
         </div>
+        <div class="buttonstory">
+            <button class="button1"><a href="biljetter.html">Till biljetter</a></button>
+    </div>
     </main>
     <footer>
         <p>Gnema</p>
