--- a/biljetter.html
+++ b/biljetter.html
@@ -38,7 +38,7 @@
     </header>
     <div class="body-biljetter">
     <div class="rubrik.container">
-        <p class="rubrik">Skulptören</p>
+        <p class="rubrik">SKULPTÖREN</p>
     </div>
 
     <ul class="showcase">
