--- a/story.html
+++ b/story.html
@@ -103,11 +103,23 @@
     </div>
     </main>
     <footer>
-        <p>Gnema</p>
-        <div class="socials">
-            <img src="icons8-instagram.svg">
-            <img src="icons8-facebook-50.png">
-            <img src="icons8-twitterx-50.png">
+        <div class="footercontainer">
+            <div class="socials">
+                <img src="icons8-instagram.svg">
+                <img src="icons8-facebook-50.png">
+                <img src="icons8-twitterx-50.png">
+            </div>
+            <div class="footernav">
+                <ul>
+                    <li><a href="index.html">HEM</a></li>
+                    <li><a href="story.html">STORY</a></li>
+                    <li><a href="biljetter.html">BILJETTER</a></li>
+                    <li><a href="kontakt.html">KONTAKT</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footerbottom">
+            <p>Copyright &copy;2024 <span class="designer">Tobias, Elin, Lova</span></p>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
