--- a/kontakt.html
+++ b/kontakt.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
 <html lang="sv">
-    <head>
-        <meta charset="UTF-8">
-        <title>Story</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="icon" type="image/x-icon" href="bunny_symbol-tngd46.png">
-        <link rel="stylesheet" href="https://use.typekit.net/ytz6faf.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Kontakt</title>
+    <link rel="stylesheet" href="styles.css"> <!--CSS-->
+    <link rel="icon" type="image/x-icon" href="bunny_symbol-tngd46.png"> <!--Favicon-->
+    <link rel="stylesheet" href="https://use.typekit.net/ytz6faf.css"> <!--Roboto typsnitt-->
+    <link rel="stylesheet" href="https://use.typekit.net/pbj6rov.css"> <!--Bebas Neue Pro typsnitt-->
+    <link rel="stylesheet" href="https://use.typekit.net/vyi1wpo.css"> <!--Baskerville PT typsnitt-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!--Vad är detta?-->
+</head>
 <body>
+    <!--HEADER-->
     <header>
         <!--Navigation-->
         <nav class="navbar">
-         <!--Logotyp-->
+            <!--Logotyp-->
             <div class="logo">
                 <li><a href="index.html"><img src="bunny_symbol-tngd46.png" alt="Skulptören logotyp"></li>
             </div>
+            <!--Relativa länkar-->
             <ul class="links">
                 <li><a href="index.html">HEM</a></li>
                 <li><a href="story.html">STORY</a></li>
                 <li><a href="biljetter.html">BILJETTER</a></li>
                 <li><a href="kontakt.html">KONTAKT</a></li>
             </ul>
-            <!--Hamburgare-->
+            <!--Hamburgarmeny-->
             <div class="toggle_btn">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
         <!--Dropdown menu-->
         <div class="dropdown_menu">
-                <li><a href="index.html">HEM</a></li>
-                <li><a href="story.html">STORY</a></li>
-                <li><a href="biljetter.html">BILJETTER</a></li>
-                <li><a href="kontakt.html">KONTAKT</a></li>
+            <li><a href="index.html">HEM</a></li>
+            <li><a href="story.html">STORY</a></li>
+            <li><a href="biljetter.html">BILJETTER</a></li>
+            <li><a href="kontakt.html">KONTAKT</a></li>
         </div>
     </header>
+    
     <div class="kontakta-oss">
         <div class="kontakt-content">
             <h2>Kontakta oss</h2>
-            <p>För mer info eller frågor kontakta oss via</p>
+            <p>Premiärvisning av Skulptören äger rum på Gnema i Norrköping den 21 juni 2024.</p>
+            <p>För mer info eller frågor kontakta oss.</p>
         </div>
         <div class="kontakt-container">
             <div class="kontaktinfo">
                 <div class="box">
                     <div class="icon"><img src="map.png" alt="telefon"></div>
                     <div class="kontakttext">
-                        <h3>Adress</h3>	
-                        <p>Spökvägen 1<br>Norrköping<br>666 66</p>
+                        <h3>Adress Gnema</h3>	
+                        <p>Kungsgatan 56<br>Norrköping<br>602 33</p>
                     </div>
                 </div>
                 <div class="box">
@@ -87,7 +92,10 @@
             <p>Copyright &copy;2024 <span class="designer">Tobias, Elin, Lova</span></p>
         </div>
     </footer>
+
+<!--JAVASCRIPT LÄNK-->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="script.js"></script>
+
 </body>
 </html>
