--- a/biljetter.html
+++ b/biljetter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Biljetter</title>
     <link rel="stylesheet" href="styles.css"> <!--CSS-->
-    <link rel="icon" type="image/x-icon" href="bunny_symbol-tngd46.png"> <!--Favicon-->
+    <link rel="icon" type="image/x-icon" href="ikoner/bunny_symbol-tngd46.png"> <!--Favicon-->
     <link rel="stylesheet" href="https://use.typekit.net/ytz6faf.css"> <!--Roboto typsnitt-->
     <link rel="stylesheet" href="https://use.typekit.net/pbj6rov.css"> <!--Bebas Neue Pro typsnitt-->
     <link rel="stylesheet" href="https://use.typekit.net/vyi1wpo.css"> <!--Baskerville PT typsnitt-->
@@ -17,7 +17,7 @@
         <nav class="navbar">
             <!--Logotyp-->
             <div class="logo">
-                <li><a href="index.html"><img src="bunny_symbol-tngd46.png" alt="Skulptören logotyp"></li>
+                <li><a href="index.html"><img src="ikoner/bunny_symbol-tngd46.png" alt="Skulptören logotyp"></li>
             </div>
             <!--Relativa länkar-->
             <ul class="links">
@@ -43,7 +43,7 @@
     <div class="body-biljetter">
         <div class="biljetter-container1">
             <h2 class="rubrik-biljetter">SKULPTÖREN</h2>
-            <p class="ingress-biljetter">Boka biljetter för premiären den 21 juni 2024 kl 19:00 på CNEMA i Norrköping.</p>
+            <p class="ingress-biljetter">Boka biljetter för premiären den 21 juni 2024 kl 19:00 på GNEMA i Norrköping.</p>
         </div>
 
         <ul class="showcase">
@@ -164,14 +164,14 @@
         
             <!--Liten container för logga-->
             <div class="norcopiapictures">
-                <img src="norkopiapictures.png" alt="Norcopia Pictures logotyp">
+                <img src="bilder/norkopiapictures.png" alt="Norcopia Pictures logotyp">
             </div>
             
             <!--Liten container för socials-->
             <div class="socials">
-                <img src="icons8-instagram.svg">
-                <img src="icons8-facebook-50.png">
-                <img src="icons8-twitterx-50.png">
+                <img src="ikoner/icons8-instagram.svg">
+                <img src="ikoner/icons8-facebook-50.png">
+                <img src="ikoner/icons8-twitterx-50.png">
             </div>
 
             <!--Liten container för länkar-->
