--- a/story.html
+++ b/story.html
@@ -46,7 +46,7 @@
         <div class="layout">
             <!--Layout: Kanin-bild-->
             <div id="foto-kanin">
-                <img src="bilder/mask3.png" alt="Bild på en blodig kaninmask på en skulptur">
+                <img src="bilder/kaninmask.png" alt="Bild på en blodig kaninmask på en skulptur">
             </div>
             <!--Layout: Storyline-->
             <div class="text-storyline">
