--- a/kontakt.html
+++ b/kontakt.html
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="mail">
-                    <img class="mail-icon" src="ikoner/mail-icon3.png" alt="Ikon av ett brev">
+                    <img class="mail-icon" src="ikoner/letter-icon.png" alt="Ikon av ett brev">
                     <h2 class="mail-rubrik">EMAIL</h2>
                     <p class="mailadress">norcopiapictures@gmail.com</p>
                     <p class="stad-postnummer"></p>
