--- a/kontakt.html
+++ b/kontakt.html
@@ -41,12 +41,9 @@
     </header>
     
     <main class="main-kontakt">
-    <div class="kontakta-oss">
-        <div class="kontakt-content">
-            <h2 class="h2-kontakta-oss">KONTAKTA OSS</h2>
-            <p>Är du är nyfiken på filmprojektet eller har du andra frågor? Vi svarar mer än gärna! </p>
-        </div>
-        <div class="kontaktinfo">
+      <div class="kontakta-oss">
+            <div class="kontakta-oss-rubrik">KONTAKTA OSS</div>
+            <div class="kontaktfragor">Är du är nyfiken på filmprojektet eller har du andra frågor? Vi svarar mer än gärna!</div>
                 <div class="adress">
                     <img class="adress-icon" src="ikoner/map-icon.png" alt="Ikon av en kartnål">
                     <h2 class="adress-rubrik">ADRESS GNEMA</h2>
@@ -67,8 +64,7 @@
                     <p class="mailadress">norcopiapictures@gmail.com</p>
                     <p class="stad-postnummer"></p>
                 </div>
-            </div>
-        </div>
+      </div>
     </main>
 
         <section id="gradient-kontakt">
