--- a/kontakt.html
+++ b/kontakt.html
@@ -57,7 +57,7 @@
             <div class="kontaktinfo">
                 <!--Adress-->
                 <div class="adress">
-                    <img class="contact-icon" src="ikoner/pin_2.png" alt="Ikon av en kartnål">
+                    <img class="contact-icon" src="map-icon.png" alt="Ikon av en kartnål">
                         <h2 class="adress-rubrik">ADRESS GNEMA</h2>
                             <p class="gatunummer">Kungsgatan 56</p>
                             <p class="stad-postnummer">602 33, Norrköping</p>
@@ -65,7 +65,7 @@
 
                 <!--Telefon-->
                 <div class="telefon">
-                    <img class="contact-icon" src="ikoner/phone_2.png" alt="Ikon av en telefon">
+                    <img class="contact-icon" src="phone-icon.png" alt="Ikon av en telefon">
                         <h2 class="telefon-rubrik">TELEFON</h2>
                             <p class="telefonnummer">010-14 50 50</p>
                             <p class="stad-postnummer"></p>
@@ -73,7 +73,7 @@
 
                 <!--Mail-->
                 <div class="mail">
-                    <img class="contact-icon" src="ikoner/envelope_2.png" alt="Ikon av ett brev">
+                    <img class="contact-icon" src="letter-icon.png" alt="Ikon av ett brev">
                         <h2 class="mail-rubrik">EMAIL</h2>
                         <a href="mailto:norcopiapictures@example.com"><p class="mailadress">norcopiapictures@gmail.com</p></a>
                             <p class="stad-postnummer"></p>
